Google web font Lato is so readable. Global default line height bumped to 20px, which fixes a multitude of sins.

--- a/web/static/style/main.css
+++ b/web/static/style/main.css
@@ -16,7 +16,9 @@ body
 	margin: 0px;
 	border: 0;
 	background: #f8f8f8;
-	font: normal 12px Arial, lucida, sans-serif;
+	font-family: 'Lato', sans-serif;
+	font-size: 12px;
+	line-height: 20px;
 }
 
 #content
@@ -158,7 +160,8 @@ body
 	height: 38px;
 	border: none; /*overrides the border from the ui-widget_header class*/ /*background-image: url( 'images/header-bg.png' ); 	background-repeat: repeat-x; 	background-attachment: fixed;*/
 	z-index: 2;
-	font: normal 12px Arial;
+  font-family: 'Lato', sans-serif;
+  font-size: 12px;
 }
    
 #userPreferences
